# WBM20

./: CMakeLists.txt  install.sh
include/: MD.h  wbm.h
src/: MDAccBalance.c  MDAccumulate.c  MDAux_AccBalance.c  MDAux_Accumulate.c  MDAux_AvgNSteps.c  MDAux_DischMean.c  MDAux_MeanDischarge.c  MDAux_MeanRunoff.c  MDAux_RunoffMean.c  MDAvgNSteps.c  MDBQARTpreprocess.c  MDBankfullQcalc.c  MDBaseFlow.c  MDBedloadFlux.c  MDBgc.c  MDBgcDIN.c  MDBgcDINPlusBiomass.c  MDBgcDOC.c  MDBgcFecal.c  MDBgcRiverGPP.c  MDBgcRiverLight.c  MDCParams.c  MDCloudCover.c  MDCommin_HumidityRelative.c  MDCommon_CloudCover.c  MDCommon_GrossRad.c  MDCommon_HumidityRelative.c  MDCommon_HumiditySpecific.c  MDCommon_Precipitation.c  MDCommon_SolarRad.c  MDCommon_WetDays.c  MDCommon_Wind.c  MDCore_BaseFlow.c  MDCore_Evapotranspiration.c  MDCore_PotETlib.c  MDCore_RainInfiltration.c  MDCore_RainIntercept.c  MDCore_RainPotET.c  MDCore_RainPotETHamon.c  MDCore_RainPotETJensen.c  (+152 more)
